[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/montserrat_extra_bold_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/fonts/montserrat_extra_bold_32.tres" type="DynamicFont" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.32292
margin_top = -158.286
margin_right = -9.32288
margin_bottom = -122.286
size_flags_horizontal = 3
custom_constants/margin_right = 75
custom_constants/margin_top = 75
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 75.0
margin_top = 75.0
margin_right = 1205.0
margin_bottom = 521.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 25

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "CARD GAME"
align = 1

[node name="NameContaier" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1130.0
margin_bottom = 154.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/NameContaier"]
margin_right = 563.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Name: "

[node name="NameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/NameContaier"]
margin_left = 567.0
margin_right = 1130.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
max_length = 12

[node name="IpContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 1130.0
margin_bottom = 229.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/IpContainer"]
margin_right = 563.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "IP: "

[node name="IpEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/IpContainer"]
margin_left = 567.0
margin_right = 1130.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
max_length = 12

[node name="PortContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 1130.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PortContainer"]
margin_right = 563.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Port:"

[node name="PortEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/PortContainer"]
margin_left = 567.0
margin_right = 1130.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
max_length = 4

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 1130.0
margin_bottom = 375.0
custom_constants/separation = 25

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
margin_right = 552.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Join"

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/Buttons"]
margin_left = 577.0
margin_right = 1130.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Host"

[node name="DebugButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 1130.0
margin_bottom = 446.0
custom_constants/separation = 25

[node name="ClientButton" type="Button" parent="CenterContainer/VBoxContainer/DebugButtons"]
margin_right = 552.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Client"

[node name="ServerButton" type="Button" parent="CenterContainer/VBoxContainer/DebugButtons"]
margin_left = 577.0
margin_right = 1130.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Server"
[connection signal="text_changed" from="CenterContainer/VBoxContainer/NameContaier/NameEdit" to="." method="_on_NameEdit_text_changed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/IpContainer/IpEdit" to="." method="_on_IpEdit_text_changed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/PortContainer/PortEdit" to="." method="_on_PortEdit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/DebugButtons/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/DebugButtons/ServerButton" to="." method="_on_ServerButton_pressed"]
